# privatevault-mcp

./: .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml  validation_report.json
.github/workflows/: ci.yml
docs/: claude-desktop-setup.md  cursor-setup.md  threat_model.md
docs/examples/: agent_integration.py
examples/: accounts-payable-demo.py
redteam/: continuous_redteam.py  metrics_history.json
src/privatevault_mcp/: main.py
src/privatevault_mcp/api/: main.py
src/privatevault_mcp/core/: gateway.py  kernel.py  models.py
src/privatevault_mcp/mcp/: tools.py
tests/: test_attack_validation.py  test_mcp_tools.py
